--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -5,7 +5,7 @@
     <title>Travello</title>
 </head>
 <body>
-    {{ block content }}
-    {{ endblock }}
+    {% block content %}
+    {% endblock %}
 </body>
 </html>
