el nombre objectList se cambio a destinations, ademas de modificar el espacio en destinations, en dondes e mostrara los destinos

--- a/src/destinations/templates/destinations/destinations.html
+++ b/src/destinations/templates/destinations/destinations.html
@@ -1,4 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-
+{% for dest in destinations %}
+    <p>
+        {{ dest.id }}.-
+        <a href='.'>{{ dest.nombre }}
+    </p>
 {% endblock %}
