se coloco lo adecuado en la funcion del model Destination para llamar al enlace que redigiriria a mostrar la descripcion de un elemento de la lista y se uso en el destinations.html

--- a/src/destinations/templates/destinations/destinations.html
+++ b/src/destinations/templates/destinations/destinations.html
@@ -3,7 +3,7 @@
 {% for dest in destinations %}
     <p>
         {{ dest.id }}.-
-        <a href='.'>{{ dest.nombre }}
+        <a href='{{ dest.get_absolute_url }}'>{{ dest.nombre }}
     </p>
 {% endfor %}
 {% endblock %}
