la redirecciona la hacer click en el nombre del lugar redigirira a la descripcion del Destination

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -295,7 +295,7 @@
 									{% endif %}
 								</div>
 								<div class="destination_content">
-									<div class="destination_title"><a href="destinations.html">{{ dest.nombre }}</a>
+									<div class="destination_title"><a href="destinations/{{ dest.id }}">{{ dest.nombre }}</a>
 									</div>
 									<div class="destination_subtitle">
 										<p>{{ dest.descripcion }} </p>
