--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -301,7 +301,12 @@
 									{% endif %}
 								</div>
 								<div class="destination_content">
-									<div class="destination_title"><a href="destinations/{{ dest.id }}">{{ dest.nombre }}</a>
+									<div class="destination_title">
+										{% if user.is_authenticated %}
+										<a href="accounts/login">{{ dest.nombre }}</a>
+										{% else %}
+										<a href="destinations/{{ dest.id }}">{{ dest.nombre }}</a>
+										{% endif %}
 									</div>
 									<div class="destination_subtitle">
 										<p>{{ dest.descripcion }} </p>
