se creo un hipervinculo en index.html que llevara a la lista de destinations

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -281,6 +281,7 @@
 						</div>
 					</div>
 				</div>
+				<a href="destinations/">All Destinations</a>
 				<div class="row destinations_row">
 					<div class="col">
 						<div class="destinations_container item_grid">
