se quiso agregar algun estilo propio en main_styles.css, pero no, a pesar de eso se utilizo una clase para darle estilo a el tag a que lleva a la lista de destinations

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -281,7 +281,9 @@
 						</div>
 					</div>
 				</div>
-				<a href="destinations/">All Destinations</a>
+				<div class="spec_offer text-center">
+					<a href="destinations/">All Destinations</a>
+				</div>
 				<div class="row destinations_row">
 					<div class="col">
 						<div class="destinations_container item_grid">
