--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset='utf-8'>
     <title>Travello</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="description" content="Travello template project">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="{% static 'styles/bootstrap4/bootstrap.min.css' %}">
 	<link href="{% static 'plugins/font-awesome-4.7.0/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/owl.carousel.css' %}">
@@ -197,6 +200,64 @@
 										<button class="home_search_button">search</button>
 									</div>
 								</form>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+        <!-- Intro -->
+
+		<div class="intro">
+			<div class="intro_background" style="background-image:url('{% static 'images/beach.svg' %}')"></div>
+			<div class="container">
+				<div class="row">
+					<div class="col">
+						<div class="intro_container">
+							<div class="row">
+
+								<!-- Intro Item -->
+								<div class="col-lg-4 intro_col">
+									<div class="intro_item d-flex flex-row align-items-end justify-content-start">
+										<div class="intro_icon"><img src="{% static 'images/beach.svg' %}" alt=""></div>
+										<div class="intro_content">
+											<div class="intro_title">Top Destinations</div>
+											<div class="intro_subtitle">
+												<p>Nulla pretium tincidunt felis, nec.</p>
+											</div>
+										</div>
+									</div>
+								</div>
+
+								<!-- Intro Item -->
+								<div class="col-lg-4 intro_col">
+									<div class="intro_item d-flex flex-row align-items-end justify-content-start">
+										<div class="intro_icon"><img src="{% static 'images/wallet.svg' %}" alt="">
+										</div>
+										<div class="intro_content">
+											<div class="intro_title">The Best Prices</div>
+											<div class="intro_subtitle">
+												<p>Sollicitudin mauris lobortis in.</p>
+											</div>
+										</div>
+									</div>
+								</div>
+
+								<!-- Intro Item -->
+								<div class="col-lg-4 intro_col">
+									<div class="intro_item d-flex flex-row align-items-end justify-content-start">
+										<div class="intro_icon"><img src="{% static 'images/suitcase.svg' %}" alt="">
+										</div>
+										<div class="intro_content">
+											<div class="intro_title">Amazing Services</div>
+											<div class="intro_subtitle">
+												<p>Nulla pretium tincidunt felis, nec.</p>
+											</div>
+										</div>
+									</div>
+								</div>
+
 							</div>
 						</div>
 					</div>
