--- a/src/destinations/templates/destinations/destinations.html
+++ b/src/destinations/templates/destinations/destinations.html
@@ -12,9 +12,10 @@
     {% for dest in destinations %}
         <p>
             {{ dest.id }}.-
-            <a href='{{ dest.get_absolute_url }}'>{{ dest.nombre }}</a><br>
+            <a href='{{ dest.get_absolute_url }}'>{{ dest.nombre }}</a>
             {% if user.is_staff %}
-                <a class="home_search_button text-center" style="padding:5px" href="{{ dest.get_absolute_url }}/edit">Editar</a>
+                <a class="home_search_button text-center" style="padding:5px" href="{{ dest.get_absolute_url }}edit">Editar</a>
+                <a class="home_search_button text-center" style="padding:5px" href="{{ dest.get_absolute_url }}delete">Eliminar</a>
             {% endif %}
         </p>
     {% endfor %}
