el id y nombre esta en un tag a, que a su vez estan en un div de clase news_post_title aprovechando un diseño para este

--- a/src/destinations/templates/destinations/destinations.html
+++ b/src/destinations/templates/destinations/destinations.html
@@ -11,8 +11,9 @@
     <div class="destinations_row">
     {% for dest in destinations %}
         <p>
-            {{ dest.id }}.-
-            <a href='{{ dest.get_absolute_url }}'>{{ dest.nombre }}</a>
+            <div class="news_post_title">
+                <a href='{{ dest.get_absolute_url }}'>{{ dest.id }}.- {{ dest.nombre }}</a>
+            </div>
             {% if user.is_staff %}
                 <a class="home_search_button text-center" style="padding:5px" href="{{ dest.get_absolute_url }}edit">Editar</a>
                 <a class="home_search_button text-center" style="padding:5px" href="{{ dest.get_absolute_url }}delete">Eliminar</a>
