--- a/src/destinations/templates/destinations/destinations.html
+++ b/src/destinations/templates/destinations/destinations.html
@@ -11,12 +11,18 @@
     <div class="destinations_row">
     {% for dest in destinations %}
         <p>
-            <div class="news_post_title">
-                <a href='{{ dest.get_absolute_url }}'>{{ dest.id }}.- {{ dest.nombre }}</a>
-            </div>
-            {% if user.is_staff %}
-                <a class="home_search_button text-center" style="padding:5px" href="{{ dest.get_absolute_url }}edit">Editar</a>
-                <a class="home_search_button text-center" style="padding:5px" href="{{ dest.get_absolute_url }}delete">Eliminar</a>
+            {% if user.is_authenticated %}
+                <div class="news_post_title">
+                    <a href='{{ dest.get_absolute_url }}'>{{ dest.id }}.- {{ dest.nombre }}</a>
+                </div>
+                {% if user.is_staff %}
+                    <a class="home_search_button text-center" style="padding:5px" href="{{ dest.get_absolute_url }}edit">Editar</a>
+                    <a class="home_search_button text-center" style="padding:5px" href="{{ dest.get_absolute_url }}delete">Eliminar</a>
+                {% endif %}
+            {% else %}
+                <div class="news_post_title">
+                    <a href='/accounts/login'>{{ dest.id }}.- {{ dest.nombre }}</a>
+                </div>
             {% endif %}
         </p>
     {% endfor %}
