--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -29,15 +29,15 @@
 								<div class="logo"><a href="index.html">Travello</a></div>
 								<nav class="main_nav">
 									<ul class="d-flex flex-row align-items-start justify-content-start">
-										<li class="active"><a href="index.html">Home</a></li>
+										<li class="active"><a href="/">Home</a></li>
 										<li><a href="#">Services</a></li>
 										<li><a href="#">News</a></li>
 										{% if user.is_authenticated %}
 										<li><a href="#">Hello, {{ user.first_name }}</a></li>
-										<li><a href="accounts/logout">Log out</a></li>
+										<li><a href="/accounts/logout">Log out</a></li>
 										{% else %}
-										<li><a href="accounts/register">Register</a></li>
-										<li><a href="accounts/login">Login</a></li>
+										<li><a href="/accounts/register">Register</a></li>
+										<li><a href="/accounts/login">Login</a></li>
 										{% endif %}
 									</ul>
 								</nav>
@@ -80,11 +80,16 @@
 			</div>
 			<div class="menu_content">
 				<ul>
-					<li><a href="inex.html">Home</a></li>
-					<li><a href="about.html">About us</a></li>
+					<li><a href="/">Home</a></li>
 					<li><a href="#">Services</a></li>
 					<li><a href="news.html">News</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					{% if user.is_authenticated %}
+							<li><a href="#">Hello, {{ user.first_name }}</a></li>
+							<li><a href="/accounts/logout">Log out</a></li>
+						{% else %}
+							<li><a href="/accounts/register">Register</a></li>
+							<li><a href="/accounts/login">Login</a></li>
+					{% endif %}
 				</ul>
 			</div>
 			<div class="menu_social">
