se cambio la direccion del tag a, ya que algunos no tendrian una oferta especial

--- a/src/destinations/templates/destinations/destinationsShow.html
+++ b/src/destinations/templates/destinations/destinationsShow.html
@@ -22,7 +22,7 @@
     </div>
     <div class="destination_content">
         <div class="destination_title">
-            <a href="#spec_offer">{{ dest.nombre }}</a> <!-- se coloco con el tag a para que siga teniendo el mismo css ademas de redirigir a una clase-->
+            <a href="#destination_image">{{ dest.nombre }}</a> <!-- se coloco con el tag a para que siga teniendo el mismo css ademas de redirigir a una clase-->
         </div>
         <div class="destination_subtitle">
             <p>{{ dest.descripcion }} </p>
