--- a/src/destinations/templates/destinations/destinationsShow.html
+++ b/src/destinations/templates/destinations/destinationsShow.html
@@ -30,8 +30,8 @@
         <div class="destination_price">Precio desde ${{ dest.precio }}
             {% if user.is_authenticated %}
                 {% if user.is_staff %}
-                    <a class="home_search_button text-center" style="padding:5px" href="/edit">Editar</a>
-                    <a class="home_search_button text-center" style="padding:5px" href="/delete">Eliminar</a>
+                    <a class="home_search_button text-center" style="padding:5px" href="./edit">Editar</a>
+                    <a class="home_search_button text-center" style="padding:5px" href="./delete">Eliminar</a>
                 {% endif %}
             {% endif %}
         </div>
