--- a/src/destinations/templates/destinations/destinationsDelete.html
+++ b/src/destinations/templates/destinations/destinationsDelete.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
-<form method="POST">{% csrf_token %}
+<form method="POST" class="container text-center">{% csrf_token %}
     <div class="section_title">
         <h2>Desea borrar el destino: </h2>
     </div>
-    <div class="destination_image">
+    <div class="destination_image container">
         <img src="{{ dest.img.url }}" alt="image">
         {% if dest.oferta %}
         <div class="spec_offer text-center">
