--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -30,10 +30,10 @@
 					<div class="col">
 						<div class="header_content d-flex flex-row align-items-center justify-content-start">
 							<div class="header_content_inner d-flex flex-row align-items-end justify-content-start">
-								<div class="logo"><a href="index.html">Travello</a></div>
+								<div class="logo"><a href="/">Travello</a></div>
 								<nav class="main_nav">
 									<ul class="d-flex flex-row align-items-start justify-content-start">
-										<li class="active"><a href="index.html">Home</a></li>
+										<li class="active"><a href="/">Home</a></li>
 										<li><a href="#">Services</a></li>
 										<li><a href="#">News</a></li>
 										{% if user.is_authenticated %}
@@ -74,7 +74,7 @@
 
 		<div class="menu">
 			<div class="menu_header d-flex flex-row align-items-center justify-content-start">
-				<div class="menu_logo"><a href="index.html">Travello</a></div>
+				<div class="menu_logo"><a href="/">Travello</a></div>
 				<div class="menu_close_container ml-auto">
 					<div class="menu_close">
 						<div></div>
