--- a/src/accounts/templates/accounts/login.html
+++ b/src/accounts/templates/accounts/login.html
@@ -1,10 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
-<form method="POST">{% csrf_token %}
+<div class="section_title text-center">
+    <h2>Iniciar sesión (Login)</h2>
+</div>
+<form method="POST" class="container text-center">{% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Ingresar"/>
+    <input class="home_search_button text-center" type="submit" value="Ingresar"/>
 </form>
-<div>
+<div class="container text-data">
     {% for message in messages %}
         <h4>{{ message }} </h4>
     {% endfor %}
