se agrego un tag a que permitira crear un objeto Dstination, este tag tenia clases existentes para utilizar el css

--- a/src/destinations/templates/destinations/destinations.html
+++ b/src/destinations/templates/destinations/destinations.html
@@ -8,6 +8,9 @@
             </div>
         </div>
     </div>
+    <div class="home_search_button text-center" style="font-size:130%; padding:9px">
+        <a href="/destinations/create">Create Destination</a>
+    </div>
     <div class="destinations_row">
     {% for dest in destinations %}
         <p>
