se uso l clase text-center para centra el contenido mostrado como descripcion en destinationsShow.html

--- a/src/destinations/templates/destinations/destinationsShow.html
+++ b/src/destinations/templates/destinations/destinationsShow.html
@@ -7,7 +7,7 @@
     <h2> Departamento del Perú <h2>
 </div>
 
-<div class="destination_image container">
+<div class="destination_image container text-center">
     <img src="{{ dest.img.url }}" alt="image">
     {% if dest.oferta %}
     <div class="spec_offer text-center">
