--- a/src/destinations/templates/destinations/destinations.html
+++ b/src/destinations/templates/destinations/destinations.html
@@ -8,10 +8,11 @@
             </div>
         </div>
     </div>
-    <div class="home_search_button text-center" style="font-size:130%; padding:9px">
-        <a href="/destinations/create">Create Destination</a>
-    </div>
-    <div class="destinations_row">
+    {% if user.is_staff %}
+        <a class="home_search_button text-center" style="font-size:130%; padding:9px" href="/destinations/create">Create Destination</a>
+    {% endif %}
+    <hr>
+    <div class="">
     {% for dest in destinations %}
         <p>
             {% if user.is_authenticated %}
