se modifico el destinationsDelete para que sea intuitivo, el color rojo da la impresion que no es algo que se deb hacer

--- a/src/destinations/templates/destinations/destinationsDelete.html
+++ b/src/destinations/templates/destinations/destinationsDelete.html
@@ -19,9 +19,10 @@
     <div class="destination_title">
         <a href="#destination_image">{{ dest.nombre }}</a> <!-- se coloco con el tag a para que siga teniendo el mismo css ademas de redirigir a una clase-->
     </div>
-    <input class="home_search_button text-center" type="submit" value="Confirmar"/>
-    <div class="home_search_button text-center" style="padding:8px">
-        <a href="/destinations">Cancelar</a>
+    <input class="home_search_button text-center" style="background-color: red"type="submit" value="Confirmar"/><hr>
+    <div class="container">
+        <a class="home_search_button text-center" style="font-size:130%; padding:16px" href="/destinations">Cancelar</a>
     </div>
+    <hr>
 </form>
 {% endblock %}
