se coloco un block con el nombre title en base.html dentro del tag title, para ser utilizado en todos los demas templates, independientemente si son de apps diferentes para colocar un titulo adecuado

--- a/src/destinations/templates/destinations/destinations.html
+++ b/src/destinations/templates/destinations/destinations.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title %}
+    Lista de Destinations
+{% endblock %}
 {% block content %}
 <div class="destinations" id="destinations">
     <div class="row">
