--- a/src/destinations/templates/destinations/destinationsShow.html
+++ b/src/destinations/templates/destinations/destinationsShow.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title %}
+    Mostrar Destination
+{% endblock %}
 {% block content %}
 <hr>
 <a class="home_search_button text-center" style="font-size:140%; padding:6px" href="/destinations/">All Destinations</a>
