--- a/src/accounts/templates/accounts/login.html
+++ b/src/accounts/templates/accounts/login.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title %}
+    Iniciar Sesión
+{% endblock %}
 {% block content %}
 <div class="section_title text-center">
     <h2>Iniciar sesión (Login)</h2>
