--- a/src/accounts/templates/accounts/register.html
+++ b/src/accounts/templates/accounts/register.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title %}
+    Registrarse
+{% endblock %}
 {% block content %}
 <div class="section_title text-center">
     <h2>Registrar nuevo usuario</h2>
