--- a/src/destinations/templates/destinations/destinationsCreate.html
+++ b/src/destinations/templates/destinations/destinationsCreate.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title %}
+    Crear Destination
+{% endblock %}
 {% block content %}
 <div class="section_title text-center">
     <h2>Crear nuevo Destination</h2>
