--- a/src/destinations/templates/destinations/destinationsDelete.html
+++ b/src/destinations/templates/destinations/destinationsDelete.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title %}
+    Borrar Destination
+{% endblock %}
 {% block content %}
 <form method="POST" class="container text-center">{% csrf_token %}
     <div class="section_title">
