--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -3,7 +3,10 @@
 <html>
 <head>
     <meta charset='utf-8'>
-    <title>Travello</title>
+    <title>
+		{% block title %}
+		{% endblock %}
+	</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Travello template project">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
