se modifico el color a un atributo de la clase desc en my_style.css

--- a/src/static/styles/my_style.css
+++ b/src/static/styles/my_style.css
@@ -41,6 +41,7 @@ a {
     height: 28%;
     display: flex;
     position: relative;
+    color: rgb(68, 68, 68);
 }
 .id-dest {
     font-family: 'Oswald', sans-serif;
