se agrego una clase mas, para que la descripcion del DestinationShow este correcto

--- a/src/destinations/templates/destinations/destinationsShow.html
+++ b/src/destinations/templates/destinations/destinationsShow.html
@@ -23,7 +23,7 @@
     <div class="destination_title">
         <a href="#destination_image">{{ dest.nombre }}</a> <!-- se coloco con el tag a para que siga teniendo el mismo css ademas de redirigir a una clase-->
     </div>
-        <div class="destination_subtitle">
+        <div class="desc-total">
             <p>{{ dest.descripcion }} </p>
         </div>
         <div class="destination_price">Precio desde ${{ dest.precio }}
