--- a/src/static/styles/my_style.css
+++ b/src/static/styles/my_style.css
@@ -43,6 +43,9 @@ a {
     position: relative;
     color: rgb(68, 68, 68);
 }
+.desc-total {
+    color: black;
+}
 .id-dest {
     font-family: 'Oswald', sans-serif;
     font-size: 50px;
