se agrego las clases necesarias y se borro los estilos en linea(en los tags como atributos)

--- a/src/destinations/templates/destinations/destinationsDelete.html
+++ b/src/destinations/templates/destinations/destinationsDelete.html
@@ -22,9 +22,9 @@
     <div class="destination_title">
         <a href="#destination_image">{{ dest.nombre }}</a> <!-- se coloco con el tag a para que siga teniendo el mismo css ademas de redirigir a una clase-->
     </div>
-    <input class="home_search_button text-center" style="background-color: red"type="submit" value="Confirmar"/><hr>
+    <input class="home_search_button text-center own-button-delete" type="submit" value="Confirmar"/><hr>
     <div class="container">
-        <a class="home_search_button text-center" style="font-size:130%; padding:16px" href="/destinations">Cancelar</a>
+        <a class="home_search_button text-center own-button" href="/destinations">Cancelar</a>
     </div>
     <hr>
 </form>
