--- a/src/accounts/templates/accounts/login.html
+++ b/src/accounts/templates/accounts/login.html
@@ -10,9 +10,11 @@
     {{ form.as_p }}
     <input class="home_search_button text-center" type="submit" value="Ingresar"/>
 </form>
-<div class="container text-data">
+<hr>
+<div class="container text-center">
     {% for message in messages %}
         <h4>{{ message }} </h4>
     {% endfor %}
 </div>
+<hr>
 {% endblock %}
