se reemplazo el metodo index por la clase view, que tambien hereda de un listview generico, en donde se establecio un nombre de template para evitar cambiar el nombre al archivo, ademas de cmabiar lo necesario en urls.py e incluso cambiar el nombre por el que se llamaba a la lista de objetos en el index.html, que ahora se llama object_list

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -288,7 +288,7 @@
 					<div class="col">
 						<div class="destinations_container item_grid">
 
-							{% for dest in destinations %}
+							{% for dest in object_list %}
 							<!-- Destination -->
 							<div class="destination item">
 								<div class="destination_image">
@@ -318,7 +318,7 @@
 								</div>
 							</div>
 							{% endfor %}
-
+							<br>
 						</div>
 					</div>
 				</div>
