--- a/src/destinations/templates/destinations/destinations.html
+++ b/src/destinations/templates/destinations/destinations.html
@@ -33,7 +33,10 @@
                 {% endif %}
             {% else %}
                 <div class="news_post_title">
-                    <a href='/accounts/login'>{{ dest.id }}.- {{ dest.nombre }}</a>
+                    <a href='/accounts/login'>{{ dest.nombre }}</a>
+                </div>
+                <div class="news_post_text desc">
+                    {{ dest.descripcion }}
                 </div>
             {% endif %}
         </div>
