--- a/src/destinations/templates/destinations/403.html
+++ b/src/destinations/templates/destinations/403.html
@@ -3,7 +3,9 @@
     403 | Usted no tiene acceso
 {% endblock %}
 {% block content %}
-    <div class="section_title">
-        Usted no tiene acceso a modificar de alguna forma los Destinations
+    <hr>
+    <div class="section_title text-center">
+        <h2>Usted no tiene acceso a modificar de alguna forma los Destinations</h2>
     </div>
+    <hr>
 {% endblock %}
